--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2>Contact me</h2>
             <p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=SoiGamming2009@gmail.com&su=Hello&body=This%20is%20a%20test%20email." target="_blank">SoiGamming2009@gmail.com</a></p>
             <div class="container">
-                <a href="https://discord.gg/pZZAXr32" target="_blank">
+                <a href="https://discord.gg/uuNZdCy4" target="_blank">
                     <img src="1708701355discord-icon-png.png" alt="Discord" width="45" height="45"> 
                 </a>
                 <a href="https://www.facebook.com/profile.php?id=61554079527452" target="_blank">
