--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         <section id="girlfriend">
             <h2>My girlfriend is .....</h2>
         </section>
+
+        <section id="ask-question">
+            <h2>Hỏi tôi bất cứ điều gì</h2>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdwjXwEHzZzvEHGjkFg_vHDwrifvI0iMOfWvFfyNaNVJnpWng/viewform?embedded=true" width="640" height="371" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
+        </section>
+        
+
         <section id="contact">
             <h2>Contact me</h2>
             <p>Email: <a href="mailto:SoiGamming2009@gmail.com" target="_blank">SoiGamming2009@gmail.com</a></p>
