--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <section id="ask-question">
-            <h2>Hỏi tôi bất cứ điều gì</h2>
+            <h2>Ask me anything</h2>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdwjXwEHzZzvEHGjkFg_vHDwrifvI0iMOfWvFfyNaNVJnpWng/viewform?embedded=true" width="640" height="371" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
         </section>
         
