--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <section id="ask-question">
-            <h2>Ask me anything</h2>
+            <h2>Hỏi tôi bất cứ điều gì</h2>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdwjXwEHzZzvEHGjkFg_vHDwrifvI0iMOfWvFfyNaNVJnpWng/viewform?embedded=true" width="640" height="371" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
         </section>
         
@@ -49,6 +49,9 @@
                 </a>
                 <a href="https://locket.cam/kichiro229" target="_blank">
                     <img src="eRZLg00mAQGayCrFjDBklPIpW3qFHcmUs8PUQA4z7hVe-cDKMcRqecVHONAIexJGJZM=w240-h480-rw.jpg" alt="Locket" width="45" height="45"> 
+                </a>
+                <a href="https://www.instagram.com/kichiro2299/?__pwa=1" target="_blank">
+                    <img src="360_F_837355958_Pvz6lxBV6kt2T6F3ZDs7S7mhZ7ju8XP4.jpg" alt="instagram" width="45" height="45"> 
                 </a>
             </div>
         </section>
