--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction Lương Lâm</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .ngl-button {
+            background-color: #ff5f8f; /* Màu nền của nút */
+            color: white; /* Màu chữ */
+            padding: 15px 30px;
+            border-radius: 10px;
+            text-decoration: none;
+            font-size: 16px;
+            display: inline-block;
+            margin-top: 20px;
+            transition: background-color 0.3s;
+        }
+
+        .ngl-button:hover {
+            background-color: #ff3366; /* Màu khi di chuột qua nút */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -29,11 +46,11 @@
         </section>
 
         <section id="ask-question">
-            <h2>Hỏi tôi bất cứ điều gì</h2>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdwjXwEHzZzvEHGjkFg_vHDwrifvI0iMOfWvFfyNaNVJnpWng/viewform?embedded=true" width="640" height="371" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
+            <h2>Ask me anything</h2>
+            <!-- Thêm nút NGL -->
+            <a href="https://ngl.link/username" class="ngl-button" target="_blank">Send anonymous messages via NGL</a>
         </section>
         
-
         <section id="contact">
             <h2>Contact me</h2>
             <p>Email: <a href="mailto:SoiGamming2009@gmail.com" target="_blank">SoiGamming2009@gmail.com</a></p>
