--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id="ask-question">
             <h2>Ask me anything</h2>
             <!-- Thêm nút NGL -->
-            <a href="https://ngl.link/username" class="ngl-button" target="_blank">Send anonymous messages via NGL</a>
+            <a href="https://ngl.link/luonglam1" class="ngl-button" target="_blank">Send anonymous messages via NGL</a>
         </section>
         
         <section id="contact">
