--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id="ask-question">
             <h2>Ask me anything</h2>
             <!-- Thêm nút NGL -->
-            <a href="https://ngl.link/luonglam1" class="ngl-button" target="_blank">Send anonymous messages via NGL</a>
+            <a href="https://ngl.link/username" class="ngl-button" target="_blank">Send anonymous messages via NGL</a>
         </section>
         
         <section id="contact">
@@ -68,6 +68,11 @@
                 </a>
             </div>
         </section>
+        <section id="back-to-second-page">
+            <h2>Return to the first page</h2>
+            <a href="main.html" class="btn">Back</a>
+        </section>
+        
 
         <img src="IMG_8981.jpg" alt="meomeo" width="300" height="300">
     </div>
