--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang mở đầu</title>
+    <title>Opening page</title>
     <style>
         /* Toàn bộ trang được căn giữa */
         body, html {
