Update and rename main.html to idex.html

--- a/idex.html
+++ b/idex.html
@@ -45,6 +45,6 @@
 </head>
 <body>
     <!-- Nút đổi màu liên tục được căn giữa -->
-    <a href="index.html" class="btn">Go to the main page</a>
+    <a href="main.html" class="btn">Go to the main page</a>
 </body>
 </html>
