--- a/main.html
+++ b/main.html
@@ -70,7 +70,7 @@
         </section>
         <section id="back-to-second-page">
             <h2>Return to the first page</h2>
-            <a href="main.html" class="btn">Back</a>
+            <a href="index.html" class="btn">Back</a>
         </section>
         
 
