--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
         <section id="about-me">
             <h2>About me</h2>
-            <p>My name is Hoàng Lâm. I am currently studying at Nguyen Hue HighSchool.</p>
+            <p>My name is Lương Lâm. I am currently studying at Nguyen Hue HighSchool.</p>
         </section>
 
         <section id="skills">
