--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2>Contact me</h2>
             <p>Email: <a href="mailto:SoiGamming2009@gmail.com" target="_blank">SoiGamming2009@gmail.com</a></p>
             <div class="container">
-                <a href="https://discord.gg/pZZAXr32" target="_blank">
+                <a href="https://discord.gg/XJU2amkhbh" target="_blank">
                     <img src="1708701355discord-icon-png.png" alt="Discord" width="45" height="45"> 
                 </a>
                 <a href="https://www.facebook.com/profile.php?id=61554079527452" target="_blank">
